--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,13 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    runtimeOnly('com.h2database:h2')
+   
+    implementation 'org.jobrunr:jobrunr-spring-boot-starter:1.3.1'
+    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.9'
+    
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
