--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+spring.datasource.url=jdbc:h2:mem:shcdb
+#spring.datasource.url=jdbc:h2:/Users/stefan/tmp/shcdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+spring.jpa.hibernate.ddl-auto = create
+#spring.jpa.hibernate.ddl-auto=none
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+
+spring.h2.console.enabled=true
+
+org.jobrunr.background-job-server.enabled=true
+org.jobrunr.dashboard.enabled=true
+org.jobrunr.background-job-server.worker_count=1 
+
+management.health.probes.enabled=true
+management.endpoint.health.show-details=always
