--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ org.jobrunr.background-job-server.worker_count=1
 
 management.health.probes.enabled=true
 management.endpoint.health.show-details=always
+
+logging.level.org.geotools=DEBUG
