--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,4 @@ management.health.probes.enabled=true
 management.endpoint.health.show-details=always
 
 logging.level.org.geotools=DEBUG
+logging.level.java.net=DEBUG
