--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'org.jobrunr:jobrunr-spring-boot-starter:1.3.1'
     implementation group: 'org.apache.commons', name: 'commons-text', version: '1.9'
     
+    implementation 'org.modelmapper:modelmapper:2.4.2'
     implementation 'org.geotools:gt-wms:25.0'
     
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
