--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto = create
 #spring.jpa.hibernate.ddl-auto=none
 
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type=TRACE
 
 spring.h2.console.enabled=true
 
@@ -20,5 +20,5 @@ org.jobrunr.background-job-server.worker_count=1
 management.health.probes.enabled=true
 management.endpoint.health.show-details=always
 
-logging.level.org.geotools=DEBUG
-logging.level.java.net=DEBUG
+#logging.level.org.geotools=DEBUG
+#logging.level.java.net=DEBUG
