--- a/build.gradle
+++ b/build.gradle
@@ -31,11 +31,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     runtimeOnly('com.h2database:h2')
    
-    implementation 'org.jobrunr:jobrunr-spring-boot-starter:1.3.1'
+    implementation 'org.jobrunr:jobrunr-spring-boot-starter:2.0.1'
     implementation group: 'org.apache.commons', name: 'commons-text', version: '1.9'
     
     implementation 'org.modelmapper:modelmapper:2.4.2'
-    implementation 'org.geotools:gt-wms:25.0'
+    implementation group: 'com.cronutils', name: 'cron-utils', version: '9.1.5'
+
+    //implementation 'org.geotools:gt-wms:25.0'
     
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
