--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ plugins {
 group = 'io.github.sogis'
 version = '0.0.1-SNAPSHOT'
 
-sourceCompatibility = '1.8'
-targetCompatibility = '1.8'
+sourceCompatibility = '11'
+targetCompatibility = '11'
 
 configurations.all {
     resolutionStrategy {
@@ -30,10 +30,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     runtimeOnly('com.h2database:h2')
+    implementation group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '2.11.1'
    
     implementation 'org.jobrunr:jobrunr-spring-boot-starter:2.0.1'
     implementation group: 'org.apache.commons', name: 'commons-text', version: '1.9'
     
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.3'
     implementation 'org.modelmapper:modelmapper:2.4.2'
     implementation group: 'com.cronutils', name: 'cron-utils', version: '9.1.5'
 
