--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -135,6 +135,7 @@ app:
     - identifier: 4
       title: SOGIS INTERLIS Modellablage (Prod)
       url: https://geo.so.ch/models/
+      #url: http://models.geo.gl.ch
       type: ILI_REPO
       runFrequency: 0 * * * *
       active: true
@@ -148,21 +149,61 @@ app:
               parameters: 
 #            - identifier: 402
 #              checkClass: ch.so.agi.healthcheck.check.CheckRepoIlis
-#              parameters: 
-    - identifier: 5
-      title: VSA INTERLIS Modellablage (Prod)
-      url: https://vsa.ch/models
-      type: ILI_REPO
-      runFrequency: 0 * * * *
-      active: true
-      probesVars:
-        - identifier: 51
-          probeClass: ch.so.agi.healthcheck.probe.IliRepoGet
-          parameters: 
+#              parameters:
+        - identifier: 42
+          probeClass: ch.so.agi.healthcheck.probe.HttpGetPath
+          parameters: "{\"path\": \"ilimodels.xml\"}"
           checksVars:
-            - identifier: 501
+            - identifier: 402
               checkClass: ch.so.agi.healthcheck.check.HttpStatusNoError
               parameters: 
-            - identifier: 502
-              checkClass: ch.so.agi.healthcheck.check.CheckRepoIlis
+            - identifier: 403
+              checkClass: ch.so.agi.healthcheck.check.Ilivalidator
               parameters: 
+        - identifier: 42
+          probeClass: ch.so.agi.healthcheck.probe.HttpGetPath
+          parameters: "{\"path\": \"ilisite.xml\"}"
+          checksVars:
+            - identifier: 402
+              checkClass: ch.so.agi.healthcheck.check.HttpStatusNoError
+              parameters: 
+            - identifier: 403
+              checkClass: ch.so.agi.healthcheck.check.Ilivalidator
+              parameters: 
+#    - identifier: 5
+#      title: VSA INTERLIS Modellablage (Prod)
+#      url: https://vsa.ch/models
+#      type: ILI_REPO
+#      runFrequency: 0 * * * *
+#      active: true
+#      probesVars:
+#        - identifier: 51
+#          probeClass: ch.so.agi.healthcheck.probe.IliRepoGet
+#          parameters: 
+#          checksVars:
+#            - identifier: 501
+#              checkClass: ch.so.agi.healthcheck.check.HttpStatusNoError
+#              parameters: 
+#            - identifier: 502
+#              checkClass: ch.so.agi.healthcheck.check.CheckRepoIlis
+#              parameters: 
+#        - identifier: 52
+#          probeClass: ch.so.agi.healthcheck.probe.HttpGetPath
+#          parameters: "{\"path\": \"ilimodels.xml\"}"
+#          checksVars:
+#            - identifier: 521
+#              checkClass: ch.so.agi.healthcheck.check.HttpStatusNoError
+#              parameters: 
+#            - identifier: 522
+#              checkClass: ch.so.agi.healthcheck.check.Ilivalidator
+#              parameters: 
+#        - identifier: 53
+#          probeClass: ch.so.agi.healthcheck.probe.HttpGetPath
+#          parameters: "{\"path\": \"ilisite.xml\"}"
+#          checksVars:
+#            - identifier: 531
+#              checkClass: ch.so.agi.healthcheck.check.HttpStatusNoError
+#              parameters: 
+#            - identifier: 532
+#              checkClass: ch.so.agi.healthcheck.check.Ilivalidator
+#              parameters: 
